# aMGSIM

./: .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.md  codons_damage_rev_df  environment.yaml  environment.yml  junit.xml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: aMGSIM_ci.yml  publish_conda.yml  publish_pipy.yml  pythonpackage.yml
aMGSIM/: SimReadsAncient.py  __init__.py  __main__.py  _version.py
aMGSIM/Commands/: AddDuplicates.py  AncientGenomes.py  AncientReads.py  Estimate.py  FilterBAM2sim.py  MultiCov.py  ProteinAnalysis.py  ReadsAncient.py  SelectGenome.py.py  Woltka2Sim.py  __init__.py
conda/: meta.yaml
examples/assets/: README.md  misincorporation.txt
examples/config/: ag-config.yml  ar-config.yml  ar-global-config.yml  aw-config.yml  fb-config.yml  fb2sim-config.yml
examples/data/: genome-comp.tsv  genome-paths-list.tsv  genome_list.txt
extra/: codon-damage.py
tests/: test_cli.py
