[metadata]
description-file = README.md

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[flake8]
max-line-length = 100
ignore = E122,E123,E126,E127,E128,E731,E722
exclude = build,aMGSIM/_version.py,tests,conda.recipe,.git,versioneer.py,benchmarks,.asv

[tool:pytest]
script_launch_mode = subprocess
norecursedirs= .* *.egg* build dist conda.recipe
addopts =
    --junitxml=junit.xml
    --ignore setup.py
    --ignore run_test.py
    --tb native
    --strict-markers
    --durations=20
env =
    PYTHONHASHSEED=0
markers =
    serial: execute test serially (to avoid race conditions)


[versioneer]
VCS = git
style = pep440
versionfile_source = aMGSIM/_version.py
versionfile_build = aMGSIM/_version.py
tag_prefix =
parentdir_prefix = aMGSIM-

[bdist_wheel]
universal=1